fix image overflow

--- a/css/master.css
+++ b/css/master.css
@@ -45,16 +45,13 @@ nav .links .icon span {
 #headline {
   background-color: var(--secondary-template-color);
   height: 100vh;
-}
-section .headline-container {
+  overflow: hidden;
   position: relative;
 }
-section .headline-container .image {
+section .image {
   position: absolute;
   top: 300px;
-  left: 214px;
-}
-section .headline-container .image img {
+  left: 228px;
 }
 section .headline-container .text {
   display: flex;
